<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    android:padding="16dp"
    tools:context=".NoteDetailsActivity">

    <RelativeLayout
        android:id="@+id/title_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/page_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_note_title"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/micButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="false"
            android:layout_toStartOf="@id/save_note_btn"
            android:layout_centerInParent="true"
            android:backgroundTint="#F9F8FA"
            android:src="@drawable/ic_mic_black_off_foreground" />

        <ImageButton
            android:id="@+id/save_note_btn"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/save_btn_description"
            android:src="@drawable/baseline_save_24"
            app:tint="@color/white" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_bar_layout"
        android:layout_marginVertical="26dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        android:padding="12dp">

        <EditText
            android:id="@+id/notes_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:hint="@string/title_hint"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/notes_content_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:gravity="top"
            android:hint="@string/content_hint"
            android:minLines="15"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/delete_note_textview_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/delete_note_tv"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:visibility="gone" />


</RelativeLayout>